force-app/main/default/objects/VDT_Log__e.object
<CustomObject>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quiddity__c</fullName>
        <label>Quiddity</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>